notify bug fixed

--- a/app/templates/account/email/position_close.html
+++ b/app/templates/account/email/position_close.html
@@ -1,4 +1,4 @@
 <p>The position for {{ position.ticker }} was closed!
-Algotrader sold {{ str(position.stocks) }} by {{ str(position.close_price) }} each.
-    PROFIT :{{str(position.profit)}}</p>>
+Algotrader sold {{ position.stocks|string }} by {{ position.close_price|string }} each.
+    PROFIT :{{position.profit|string}}</p>
 
