--- a/app/templates/account/email/position_open.html
+++ b/app/templates/account/email/position_open.html
@@ -1,3 +1,3 @@
 <p>New position was open for {{ position.ticker }}
-    Algotrader bought {{ position.stocks|string}} by {{ position.open_price|string }} each.</p>
+    Algotrader bought {{ position.stocks|string}} stocks by {{ position.open_price|string }} each.</p>
 
