--- a/app/templates/account/email/position_close.html
+++ b/app/templates/account/email/position_close.html
@@ -1,4 +1,4 @@
 <p>The position for {{ position.ticker }} was closed!
 Algotrader sold {{ position.stocks|string }} stocks by {{ position.close_price|string }} each.
-    PROFIT :{{profit|string}}</p>
+    PROFIT :{{position.profit|string}}</p>
 
