--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -34,6 +34,7 @@
                     <th>Average drop %</th>
                     <th>Average spread %</th>
                     <th>TipRank</th>
+                    <th>Yahoo</th>
                     <th>PE</th>
                     <th>FMP rating</th>
                     <th>FMP score</th>
@@ -62,6 +63,7 @@
                         {% endif %}
                         >{{ m.tipranks }}
                     </td>
+                    <td>{{ m.yahoo_rank }}</td>
                     <td>{{ m.fmp_pe|round(1, 'floor') }}</td>
                     <td>{{ m.fmp_rating }}</td>
                     <td>{{ m.fmp_score }}</td>
