--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -36,15 +36,15 @@
 
         <h2>Setting a PC</h2>
         <h4>Adding to Autostart</h4>
-        1. Go to algotrader folder. Right-click win_start_all.bat, create shortcut. Cut/Copy it.
-        2. Go to C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
-        3. Paste shortcut.
+        1. Go to algotrader folder. Right-click win_start_all.bat, create shortcut. Cut/Copy it.<br>
+        2. Go to C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup<br>
+        3. Paste shortcut.<br>
         <h4>Setting Autorestart</h4>
-        1. Open Task Scheduler
-        2. Create Basic task. Action: shutdown  Argument: /r
+        1. Open Task Scheduler<br>
+        2. Create Basic task. Action: shutdown  Argument: /r<br>
         <h4>Setting AutoLogOn</h4>
-        1. Right click on Start and select Run, type NetPLWiz and then press Enter.
-        2. Select User Account. Uncheck the option to ask for a password.
+        1. Right click on Start and select Run, type NetPLWiz and then press Enter.<br>
+        2. Select User Account. Uncheck the option to ask for a password.<br>
 
 
         <h1>Linux</h1>
@@ -57,20 +57,20 @@
         4. Download Algotrader package<br>
         <a href="/station/downloadzip" download ><i class="nav-link-icon fa fa-download"> </i>AlgoTrader Package</a><br>
         5. Unzip <br>
-        6. Go to forder "twsapi" make linux_install.sh executable
+        6. Go to forder "twsapi" make linux_install.sh executable<br>
         7. run : linux_install.sh<br>
         7. Ready! Launch with "linux_start_all.sh"<br>
 
         <h2>Setting a PC</h2>
         <h4>Adding to Autostart</h4>
-        1. Go to Startup applications.Add new command.Select linux_start_all.sh
-        2. modify to format:    mate-terminal -e "bash -c PATHTOFILE"
-        3. create cron job for autorestart:
-        4. sudo crontab -e
-        5. 0 16   *   *   *    /sbin/shutdown -r
-        6. 0 7   *   *   *    /sbin/shutdown -r
-        7. it configures 2 daily restarts : mornig and before trade.
-        8.Ready
+        1. Go to Startup applications.Add new command.Select linux_start_all.sh<br>
+        2. modify to format:    mate-terminal -e "bash -c PATHTOFILE"<br>
+        3. create cron job for autorestart:<br>
+        4. sudo crontab -e<br>
+        5. 0 16   *   *   *    /sbin/shutdown -r<br>
+        6. 0 7   *   *   *    /sbin/shutdown -r<br>
+        7. it configures 2 daily restarts : mornig and before trade.<br>
+        8.Ready<br>
 
 
 
