--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -240,6 +240,7 @@
                             <th class="text-center">Rank</th>
                             <th class="text-center">Yahoo Rank</th>
                             <th class="text-center">FMP Rank</th>
+                            <th class="text-center">Underprice(%)</th>
 
                         </tr>
                         </thead>
@@ -267,7 +268,7 @@
                         <td class="text-center">{{value['tipranksRank']}}</td>
                         <td class="text-center">{{value['yahoo_rank']}}</td>
                         <td class="text-center">{{value['fmp_rating']}}</td>
-
+                        <td class="text-center">{{value['under_priced_pnt']}}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
