--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -237,10 +237,11 @@
                             <th class="text-center">Open</th>
                             <th class="text-center">Ask Price</th>
                             <th class="text-center">Target Price</th>
-                            <th class="text-center">Rank</th>
+                            <th class="text-center">TipRank</th>
                             <th class="text-center">Yahoo Rank</th>
                             <th class="text-center">FMP Rank</th>
                             <th class="text-center">Underprice(%)</th>
+                            <th class="text-center">12M Momentum</th>
 
                         </tr>
                         </thead>
@@ -269,6 +270,7 @@
                         <td class="text-center">{{value['yahoo_rank']}}</td>
                         <td class="text-center">{{value['fmp_rating']}}</td>
                         <td class="text-center">{{value['under_priced_pnt']}}</td>
+                        <td class="text-center">{{value['twelve_month_momentum']}}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
