Main page order mentioned

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -226,7 +226,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="main-card mb-3 card">
-                <div class="card-header">Tracked Candidates {{ candidates_live|length }}
+                <div class="card-header">Tracked Candidates {{ candidates_live|length }} Priority order : Tipranks > YahooRank > Underprice > Momentum
                 </div>
                 <div class="table-responsive">
                     <table class="align-middle mb-0 table table-borderless table-striped table-hover">
