number of days fixed

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="progress-sub-label">
                             <div class="sub-label-left"> {{value['stocks']}} x {{value['cost']|round(1)}}</div>
-                            <div class="sub-label-right">{{value['days_open']}} Days</div>
+                            <div class="sub-label-right">{{value['days_open']+1}} Days</div>
                             <div class="sub-label-right">{{(value['stocks']*value['cost'])|round(1)}}</div>
                         </div>
                     </div>
