market state from FMP

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -48,7 +48,7 @@
             </div>
             <div class="page-title-actions">
                 <div>
-                    <div class="mb-2 mr-2 badge badge-info">EST : {{ report.market_time_text }}</div>
+                    <div class="mb-2 mr-2 badge badge-info">EST : {{ current_est_time }}</div>
                 </div>
 
                 <div>
