stock invest gathering data added

--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -35,6 +35,7 @@
                     <th>Average spread %</th>
                     <th>TipRank</th>
                     <th>Yahoo</th>
+                    <th>Stock Invest</th>
                     <th>FMP rating</th>
                     <th>FMP score</th>
                     <th>Underpriced</th>
@@ -60,6 +61,7 @@
                     <td>{{ m.tipranks }}
                     </td>
                     <td>{{ m.yahoo_rank }}</td>
+                    <td>{{ m.stock_invest_rank }}</td>
                     <td>{{ m.fmp_rating }}</td>
                     <td>{{ m.fmp_score }}</td>
                     <td>{{ m.under_priced_pnt }}</td>
