--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -247,6 +247,7 @@
                             <th class="text-center">Target Price</th>
                             <th class="text-center">TipRank</th>
                             <th class="text-center">Yahoo Rank</th>
+                            <th class="text-center">Stock Invest</th>
                             <th class="text-center">FMP Rank</th>
                             <th class="text-center">Underprice(%)</th>
                             <th class="text-center">12M Momentum</th>
@@ -276,6 +277,7 @@
                         <td class="text-center">{{value['target_price']|round(2)}}</td>
                         <td class="text-center">{{value['tipranksRank']}}</td>
                         <td class="text-center">{{value['yahoo_rank']}}</td>
+                        <td class="text-center">{{value['stock_invest_rank']}}</td>
                         <td class="text-center">{{value['fmp_rating']}}</td>
                         <td class="text-center">{{value['under_priced_pnt']}}</td>
                         <td class="text-center">{{value['twelve_month_momentum']}}</td>
