stock invest integration

--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -86,6 +86,11 @@
                                                                href="https://www.tipranks.com/stocks/{{candidate.ticker}}/forecast">Go
                         Tiprank</a></div>
                 </div>
+                <div>
+                    <div class="mb-2 mr-2 badge badge-info"><a target="_blank"
+                                                               href="https://stockinvest.us/stock/{{candidate.ticker}}">Go
+                        to Stock Invest</a></div>
+                </div>
             </div>
         </div>
     </div>
