--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -104,6 +104,7 @@
                 <script> var hist_tr_ranks = {{ hist_tr_ranks|tojson }}; </script>
                 <script> var hist_fmp_score = {{ hist_fmp_score|tojson }}; </script>
                 <script> var hist_yahoo_rank = {{ hist_yahoo_rank|tojson }}; </script>
+                <script> var stock_invest_rank = {{ stock_invest_rank|tojson }}; </script>
 <!--                <input type="hidden" id="hist_dates" value="{{ hist_dates }}">-->
 <!--                <input type="hidden" id="hist_tr_ranks" value="{{ hist_tr_ranks }}">-->
 <!--                <input type="hidden" id="hist_fmp_score" value="{{ hist_fmp_score }}">-->
