actual stock price is shown

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -195,7 +195,7 @@
                         </li>
                         <li>
                             <!--                            <a href="/userview/portfoliostatistics" >-->
-                            <a href="https://www.interactivebrokers.co.uk/portal/?action=ACCT_MGMT_MAIN&loginType=1&clt=0&RL=1#/portfolio/performance">
+                            <a target="_blank" href="https://www.interactivebrokers.co.uk/portal/?action=ACCT_MGMT_MAIN&loginType=1&clt=0&RL=1#/portfolio/performance">
 
                                 <i class="metismenu-icon pe-7s-graph2"></i>
                                 Portfolio performance
