new column to admin

--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -39,6 +39,7 @@
                     <th>FMP rating</th>
                     <th>FMP score</th>
                     <th>Underpriced</th>
+                    <th>12M Momentum</th>
                     <th>Updated</th>
                 </tr>
                 </thead>
@@ -65,7 +66,9 @@
                     <td>{{ m.fmp_rating }}</td>
                     <td>{{ m.fmp_score }}</td>
                     <td>{{ m.under_priced_pnt }}</td>
+                    <td>{{ m.twelve_month_momentum }}</td>
                     <td>{{ m.updated_server_time }}</td>
+
 
                 </tr>
                 {% endfor %}
