--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="col-md-6 col-xl-4">
-            <div class="card mb-3 widget-content bg-grow-early box_pnl">
+            <div class="card mb-3 widget-content {{ pnl_bg_box_color }}">
                 <div class="widget-content-wrapper text-white">
                     <div class="widget-content-left">
                         <div class="widget-heading">PNL</div>
